bugfix: 尝试修复不识别石头